--- a/T-CHAT-Home.css
+++ b/T-CHAT-Home.css
@@ -585,7 +585,7 @@
   }
 
   .answers1 {
-    padding-left: 97px;
+    padding-left: 76px;
   }
 
   .box2 {
@@ -601,7 +601,9 @@
   }
 
   .answers2 {
-    padding-left: 220px;
+    padding-left: 230px;
+    position: relative;
+    top: 5px;
   }
 
   .box3 {
@@ -617,7 +619,7 @@
   }
 
   .answers3 {
-    padding-left: 140px;
+    padding-left: 120px;
   }
 
   article {
@@ -674,6 +676,34 @@
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%3E%20%3Cpath%20d%3D%22M23.7%2020.8%2019%2016.1c-.2-.2-.5-.3-.8-.3h-.8c1.3-1.7%202-3.7%202-6C19.5%204.4%2015.1%200%209.7%200S0%204.4%200%209.7s4.4%209.7%209.7%209.7c2.3%200%204.3-.8%206-2v.8c0%20.3.1.6.3.8l4.7%204.7c.4.4%201.2.4%201.6%200l1.3-1.3c.5-.5.5-1.2.1-1.6zm-14-5.1c-3.3%200-6-2.7-6-6s2.7-6%206-6%206%202.7%206%206-2.6%206-6%206z%22%20fill%3D%22%23fff%22%3E%3C%2Fpath%3E%20%3C%2Fsvg%3E");
     background-repeat: no-repeat;
     content: "";
+  }
+
+  .article-category {
+    background-color: #f2f2f2;
+    border-radius: 15px;
+    color: #000000;
+    padding: 5px 8px 5px 8px;
+  }
+
+  .unsolved-category {
+    background-color: #8faadc;
+    border-radius: 15px;
+    color: #000000;
+    padding: 5px 8px 5px 8px;
+  }
+
+  .Notanswered-category {
+    background-color: #ffd966;
+    border-radius: 15px;
+    color: #000000;
+    padding: 5px 8px 5px 8px;
+  }
+
+  .answered-category {
+    background-color: #ff6969;
+    border-radius: 15px;
+    color: #000000;
+    padding: 5px 8px 5px 8px;
   }
 
   .notification {
