かなりの変更

--- a/T-CHAT-Detail/T-CHAT-Temp.css
+++ b/T-CHAT-Detail/T-CHAT-Temp.css
@@ -342,7 +342,7 @@ h1 {
   color: #a6a6a6;
 }
 
-.answer {
+.answer-form {
   margin-top: 10px;
   background-color: #fff;
   border-radius: 8px 8px 8px 8px;
