--- a/T-CHAT-Detail/T-CHAT-Temp.css
+++ b/T-CHAT-Detail/T-CHAT-Temp.css
@@ -221,6 +221,18 @@ h1 {
   font-weight: normal;
 }
 
+blockquote{
+  margin: 0;
+  padding: 0;
+  counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
+}
+blockquote {
+  border-left: 4px solid #ccc;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  padding-left: 16px;
+}
+
 .article-category {
   background-color: #f2f2f2;
   border-radius: 15px;
