--- a/T-CHAT-Detail/T-CHAT-Detail.css
+++ b/T-CHAT-Detail/T-CHAT-Detail.css
@@ -242,7 +242,7 @@ h1 {
 }
 
 .total {
-  margin-left: 1000px;
+  margin-left: 900px;
   /* .unsolved-category-answer と同じスタイルを持たせる */
   position: absolute;
   /* 絶対位置を指定 */
@@ -343,38 +343,40 @@ h1 {
   color: #a6a6a6;
 }
 
-.answer {
-  margin-top: 10px;
-  background-color: #fff;
-  border-radius: 8px 8px 8px 8px;
+#editor_area {
+  display: block;
+
+  min-height: 200px;
+  clear: none;
+  margin-bottom: 1rem;
+  position: relative;
+  top: 10px;
+  background: #fff;
+
+  border: 2px solid #ccc; /* 線の太さを調整 */
+  border-radius: 5px 5px 5px 5px; /* 右下と左下だけを丸くする */
+}
+/* 調整したいツールバー項目のスタイル */
+
+.ql-toolbar.ql-snow {
+  border: 2px solid #ccc;
+  border-radius: 5px 5px 0 0; /* 右下と左下だけを丸くする */
+  background: #fff;
+}
+.ql-container {
+  height: auto;
+
+  min-height: 200px;
 }
 
-.answer2 {
-  display: flex;
-  overflow: hidden;
-  /* float要素の後にくる要素が影響を受けないようにするために使用 */
-  flex-direction: column;
+@media (max-width: 750px) {
+  #editor_area {
+    width: 100%;
+  }
 }
-
-.element {
-  border: 1px solid #000;
-  border-radius: 8px 8px 0 0;
-}
-
-.textarea {
-  border-top: none;
-  /* 上辺に線を引かない */
-  border-bottom: none;
-  /* 上辺に線を引かない */
+#editor_area {
   font-size: 20px;
 }
-
-.textarea::placeholder {
-  color: #a8a7a7;
-  /* アイコンの色を緑に変更 */
-  font-size: 20px;
-}
-
 #answer-button {
   cursor: pointer;
 
@@ -410,272 +412,3 @@ h1 {
     /* ホバー時の背景色 */
   }
 }
-
-.file-upload {
-  background-color: #ffffff;
-  /* 白色の背景色 */
-  color: #000000;
-  /* 黒色の文字色 */
-  display: inline-block;
-  /* インラインブロック要素にすることで横幅がコンテンツに合わせられる */
-  cursor: pointer;
-  /* マウスが重なるとポインターを表示 */
-  border-radius: 5px;
-  /* 任意の角丸を追加 */
-  margin-top: 10px;
-}
-
-.file-upload i {
-  color: #808080;
-  /* 灰色のアイコン色 */
-}
-
-.file-upload:hover {
-  background-color: #f0f0f0;
-  /* ホバー時の背景色 */
-}
-
-.background-color {
-  border-top: none;
-  /* 上辺に線を引かない */
-  border-right: 1px solid #000;
-  /* 右辺に1pxの黒い線を引く */
-  border-bottom: 1px solid #000;
-  /* 下辺に1pxの黒い線を引く */
-  border-left: 1px solid #000;
-  border-radius: 0 0 8px 8px;
-}
-
-/* ここからプレビューのプログラム */
-
-/* 実際のファイルインプットを隠す */
-input[type="file"] {
-  display: none;
-}
-
-/* カスタムファイルアップロードボタンのスタイル */
-/* .custom-upload-button {
-  position: relative;
-  overflow: hidden;
-  display: inline-block;
-  font-weight: bold; 
-}
-
-.custom-upload-button span {
-  display: inline-block;
-  padding: 10px 15px;
-  background-color: #e87400;
-  color: white;
-  cursor: pointer;
-  border-radius: 5px; 
-} */
-
-/* ここからがbuttonを押し込む設定 */
-.custom-upload-button {
-  position: relative;
-  display: inline-block;
-  font-weight: bold;
-}
-
-.custom-upload-button span {
-  display: inline-block;
-  padding: 10px 15px;
-  background-color: #e87400;
-  color: white;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-  /* 背景色の変化をアニメーション化 */
-
-  /* ホバー時のスタイル */
-  &:hover {
-    background-color: #d36200;
-    /* ホバー時の色 */
-  }
-}
-
-/* ここまでがbuttonを押し込む設定 */
-/* ファイルインプットのスタイルを変更 */
-input[type="file"]+span {
-  background-color: #3498db;
-  /* ブルーの背景色 */
-  color: #fff;
-  padding: 10px 15px;
-  cursor: pointer;
-  border-radius: 5px;
-  /* ボーダーラジアスを設定 */
-}
-
-/* 選択されたファイル名表示用のスタイル */
-#fileDetails {
-  margin-top: 10px;
-  /* 適宜調整 */
-  text-align: right;
-  /* テキストを右寄せにする */
-  font-size: 14px;
-  /* 適宜調整 */
-  color: white;
-  /* テキストカラーを白に設定 */
-  background-color: #fff;
-  /* 背景色を白に設定 */
-  padding: 5px;
-  /* 適宜調整 */
-  display: inline-block;
-  /* インラインブロック要素に設定 */
-  border-radius: 5px;
-  /* ボーダーラジアスを設定 */
-}
-
-/* ファイル名と拡張子を表示するためのスタイル */
-#fileNameExtension {
-  display: inline-block;
-  margin-right: auto;
-  /* ボタンとの間隔を調整 */
-  color: black;
-  /* 拡張子のカラーをブラックに設定 */
-  background-color: #fff;
-  /* 背景色を白に設定 */
-  border-radius: 5px;
-  /* ボーダーラジアスを設定 */
-}
-
-/* プレビューボタンのスタイル */
-#previewButton {
-  background-color: #3498db;
-  color: white;
-  border: none;
-  padding: 10px 15px;
-  position: relative;
-  /* 相対配置を指定 */
-  cursor: pointer;
-  margin-left: auto;
-  display: inline-block;
-  border-radius: 5px;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
-
-  &:hover {
-    background-color: #2567a7;
-  }
-}
-
-/* 画像表示用のスタイル */
-#imageContainer {
-  display: none;
-  /* 初期状態では非表示 */
-  text-align: center;
-  /* 画像を中央揃えにする */
-}
-
-#selectedImage {
-  max-width: 50%;
-  /* 画像の最大幅を設定 */
-  max-height: 50%;
-  /* 画像の最大高さを設定 */
-  margin-top: 10px;
-  /* 適宜調整 */
-  border-radius: 5px;
-  /* ボーダーラジアスを設定 */
-  border: 3px solid #bfbfbf;
-}
-
-/* 閉じるボタンのスタイル */
-#closeButton {
-  display: none;
-  /* 初期状態では非表示 */
-  background-color: #e74c3c;
-  /* レッドの背景色 */
-  color: white;
-  border: none;
-  padding: 10px 15px;
-  cursor: pointer;
-  margin-top: 10px;
-  /* 適宜調整 */
-  border-radius: 5px;
-  /* ボーダーラジアスを設定 */
-  font-weight: bold;
-  /* または font-weight: 700; */
-  transition: background-color 0.3s ease;
-  /* 背景色の変化をアニメーション化 */
-
-  /* ホバー時のスタイル */
-  &:hover {
-    background-color: #c0392b;
-    /* ホバー時の背景色 */
-  }
-}
-
-/* ここまでがプレビューのプログラム */
-
-/* ここからモーダルウィンドウ */
-
-#overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0);
-  /* 背景が半透明になるように設定 */
-}
-
-/* モーダルウィンドウ */
-#modal {
-  display: flex;
-  flex-direction: column;
-  /* 列方向に配置 */
-  position: fixed;
-  top: 55%;
-  left: 60%;
-  width: 350px;
-  color: #000000;
-  transform: translate(-50%, -50%);
-  background: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  z-index: 2;
-  /* 最前面に表示 */
-  padding: 8px 16px;
-}
-
-.setting {
-  position: relative;
-  /* 相対位置を指定 */
-  left: 280px;
-  bottom: 55px;
-  cursor: pointer;
-  /* カーソルをポインタに変更 */
-  margin-right: 280px;
-}
-
-.content {
-  position: relative;
-  /* 相対位置を指定 */
-  margin-bottom: 250px;
-  bottom: 70px;
-
-  margin-top: 10px;
-  /* 適切なマージンを追加 */
-  border-top: 1px solid #000;
-  /* ボーダーを追加 */
-  padding-top: 20px;
-  /* 適切なパディングを追加 */
-}
-
-.list {
-  border-top: 1px solid #000;
-  /* ボーダーを追加 */
-  margin-top: auto;
-  text-align: center;
-  /* 文字を中央揃えにする */
-  cursor: pointer;
-  /* カーソルをポインタに変更 */
-  color: blue;
-  /* リンクの色を設定 */
-  text-decoration: underline;
-  /* 下線を表示 */
-  padding: 16px 0px;
-}
-
-/* ここまでがモーダルウィンドウ */
