--- a/T-CHAT-Detail/T-CHAT-Temp.css
+++ b/T-CHAT-Detail/T-CHAT-Temp.css
@@ -288,7 +288,18 @@ h1 {
   margin-top: 1px;
   margin-bottom: 1px;
 }
-
+.ans-count {
+  background: #fdf6e9;
+  color: #000;
+  padding: 3px;
+  margin-top: 5px;
+  margin-bottom: 7px;
+  margin-left: 15px;
+  font-size: 28px;
+  font-weight: bolder;
+  margin-top: 1px;
+  margin-bottom: 1px;
+}
 .comment {
   background: #fdf6e9;
   color: #333333;
@@ -329,10 +340,22 @@ h1 {
   margin-left: 40px;
 }
 
+/* 各回答のセクション */
 .response {
-  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 0.5em;
+  background-color: #ffffff;
+  margin-bottom: 1em; /* 下部に1emのマージンを追加 */
+  margin-top: 1em; /* 上部にもマージンを追加して隙間を作る */
+}
+
+/* 回答コンテナ */
+.responses {
+  background-color: transparent; /* この背景を透明にする */
+  padding: 1em; /* コンテナ全体のパディングを設定 */
   border-radius: 8px 8px 8px 8px;
 }
+
 
 .reply {
   margin-left: 15px;
