--- a/T-CHAT-Signin/T-CHAT-Signin.css
+++ b/T-CHAT-Signin/T-CHAT-Signin.css
@@ -158,13 +158,13 @@ input {
 /* ※マークのとこ */
 .rule {
   font-size: 13px;
-  color: red;
+  color: #576070;
   margin-top: -40px;
 }
 
 .rule2 {
   font-size: 13px;
-  color: red;
+  color: #576070;
   margin-top: -10px;
 }
 
