--- a/T-CHAT-Home.css
+++ b/T-CHAT-Home.css
@@ -367,6 +367,7 @@
     border-radius: 15px;
     color: #000000;
     padding: 5px 8px 5px 8px;
+    margin-right: 5px;
   }
 
   .unsolved-category {
