--- a/T-CHAT-Home.css
+++ b/T-CHAT-Home.css
@@ -9,6 +9,11 @@
     max-width: 1980px;
   }
 
+  a {
+    position: relative;
+    z-index: 10;
+  }
+
   h1 {
     margin: 2px 0;
     font-size: 15px;
@@ -78,6 +83,8 @@
   }
 
   .search-form {
+    position: relative;
+    z-index: 10;
     display: flex;
     align-items: center;
     overflow: hidden;
