消えてたー

--- a/T-CHAT-Home.css
+++ b/T-CHAT-Home.css
@@ -377,13 +377,6 @@
     margin-right: 5px;
   }
 
-  .format-category {
-    background-color: #f2f2f2;
-    border-radius: 15px;
-    color: #000000;
-    padding: 5px 8px 5px 8px;
-  }
-
   .unsolved-category {
     background-color: #8faadc;
     border-radius: 15px;
@@ -400,6 +393,25 @@
 
   .answered-category {
     background-color: #ff6969;
+    border-radius: 15px;
+    color: #000000;
+    padding: 5px 8px 5px 8px;
+  }
+
+  .format-private{
+    background-color: #92d050;
+    border-radius: 15px;
+    color: #000000;
+    padding: 5px 8px 5px 8px;
+  }
+  .format-exchange{
+    background-color: #ff6969;
+    border-radius: 15px;
+    color: #000000;
+    padding: 5px 8px 5px 8px;
+  }
+  .format-qa{    
+    background-color: #afdfe4;
     border-radius: 15px;
     color: #000000;
     padding: 5px 8px 5px 8px;
