--- a/T-CHAT-Detail/T-CHAT-Temp.css
+++ b/T-CHAT-Detail/T-CHAT-Temp.css
@@ -377,17 +377,7 @@ blockquote {
   margin-top: 1px;
   margin-bottom: 1px;
 }
-.comment {
-  background: #fdf6e9;
-  color: #333333;
-  font-family: "あおとゴシック R";
-  padding: 3px;
-  margin-left: 20px;
-  font-size: 19px;
-  font-weight: bolder;
-  margin-top: 1px;
-  margin-bottom: 10px;
-}
+
 .border {
   border-top: 1px solid #000;
   /* 線の色と太さを指定 */
@@ -461,6 +451,65 @@ blockquote {
     /* ホバー時の背景色 */
   }
 }
+
+.comment {
+  background: #fdf6e9;
+  color: #333333;
+  font-family: "あおとゴシック R";
+  padding: 3px;
+  margin-left: 20px;
+  font-size: 19px;
+  font-weight: bolder;
+  margin-top: 1px;
+  margin-bottom: 10px;
+}
+
+.reply-form-container {
+  margin-top: 10px;
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+#replyInput {
+  width: 1100px;
+  height: 50px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  font-weight: bold;
+  font-family: "あおとゴシック R";
+}
+
+.button-container {
+  text-align: right;
+  margin-top: 10px;
+  margin-right: 20px;
+  font-family: "あおとゴシック R";
+}
+
+.submit-button {
+  height: 35px;
+  width: 100px;
+  color: #fff;
+  background: #55c500;
+  font-size: 15px;
+  font-weight: bold;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+}
+
+.cancel-button {
+  width: 100px;
+  height: 35px;
+  font-size: 15px;
+  font-weight: bold;
+  background: #f5f6f6;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+}
+
+
 
 .resolved-answer {
   background-color: #e8f5e9; /* 解決された回答の背景色 */
