--- a/T-CHAT-Home.css
+++ b/T-CHAT-Home.css
@@ -543,6 +543,34 @@
     background-repeat: no-repeat;
     background-size: 120px;
   }
+  .search-form {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 3px,0px,0px,3px;
+    margin-left: 45px;
+  }
+
+  .search-form button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 23px;
+    margin-right: 7px;
+    border: none;
+    border-radius: 0 8px 8px 0;
+    background-color: #2589d0;
+    cursor: pointer;
+  }
+
+  .search-form button::after {
+    width: 20px;
+    height: 20px;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%3E%20%3Cpath%20d%3D%22M23.7%2020.8%2019%2016.1c-.2-.2-.5-.3-.8-.3h-.8c1.3-1.7%202-3.7%202-6C19.5%204.4%2015.1%200%209.7%200S0%204.4%200%209.7s4.4%209.7%209.7%209.7c2.3%200%204.3-.8%206-2v.8c0%20.3.1.6.3.8l4.7%204.7c.4.4%201.2.4%201.6%200l1.3-1.3c.5-.5.5-1.2.1-1.6zm-14-5.1c-3.3%200-6-2.7-6-6s2.7-6%206-6%206%202.7%206%206-2.6%206-6%206z%22%20fill%3D%22%23fff%22%3E%3C%2Fpath%3E%20%3C%2Fsvg%3E");
+    background-repeat: no-repeat;
+    content: "";
+  }
 
 
   main {
@@ -669,37 +697,6 @@
     display: none;
   }
 
-  .search-form {
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    border-radius: 3px,0px,0px,3px;
-    margin-left: 45px;
-  }
-
-  .search-form button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 23px;
-    margin-right: 7px;
-    border: none;
-    border-radius: 0 8px 8px 0;
-    background-color: #2589d0;
-    cursor: pointer;
-  }
-
-  .search-form button::after {
-    width: 20px;
-    height: 20px;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%3E%20%3Cpath%20d%3D%22M23.7%2020.8%2019%2016.1c-.2-.2-.5-.3-.8-.3h-.8c1.3-1.7%202-3.7%202-6C19.5%204.4%2015.1%200%209.7%200S0%204.4%200%209.7s4.4%209.7%209.7%209.7c2.3%200%204.3-.8%206-2v.8c0%20.3.1.6.3.8l4.7%204.7c.4.4%201.2.4%201.6%200l1.3-1.3c.5-.5.5-1.2.1-1.6zm-14-5.1c-3.3%200-6-2.7-6-6s2.7-6%206-6%206%202.7%206%206-2.6%206-6%206z%22%20fill%3D%22%23fff%22%3E%3C%2Fpath%3E%20%3C%2Fsvg%3E");
-    background-repeat: no-repeat;
-    content: "";
-  }
-
-  
-
   .article-category {
     font-size: 10px;
     background-color: #f2f2f2;
@@ -803,6 +800,277 @@
     display: none;
   }
 }
-@media screen and (max-width: 480px) {
+@media (max-width: 414px) and (max-height: 896px) {
+  body {
+    margin-left: auto;
+    /* margin-right: auto;
+    margin-top: 0; */
+    margin-bottom: 0;
+    padding: 0;
+    background: #fff;
+    max-width: 300px;
+    background-color: #f2f2f2;
+  }
+
+  #body {
+    background-image: url("./T-CHAT-Image/T-CHAT_icon.png");
+    background-repeat: no-repeat;
+    background-size: 120px;
+  }
+  .search-form {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 3px,0px,0px,3px;
+    margin-left: 45px;
+  }
+
+  .search-form button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 23px;
+    margin-right: 7px;
+    border: none;
+    border-radius: 0 8px 8px 0;
+    background-color: #2589d0;
+    cursor: pointer;
+  }
+
+  .search-form button::after {
+    width: 20px;
+    height: 20px;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%3E%20%3Cpath%20d%3D%22M23.7%2020.8%2019%2016.1c-.2-.2-.5-.3-.8-.3h-.8c1.3-1.7%202-3.7%202-6C19.5%204.4%2015.1%200%209.7%200S0%204.4%200%209.7s4.4%209.7%209.7%209.7c2.3%200%204.3-.8%206-2v.8c0%20.3.1.6.3.8l4.7%204.7c.4.4%201.2.4%201.6%200l1.3-1.3c.5-.5.5-1.2.1-1.6zm-14-5.1c-3.3%200-6-2.7-6-6s2.7-6%206-6%206%202.7%206%206-2.6%206-6%206z%22%20fill%3D%22%23fff%22%3E%3C%2Fpath%3E%20%3C%2Fsvg%3E");
+    background-repeat: no-repeat;
+    content: "";
+  }
+
+
+  main {
+    background-color: white;
+    border-radius: 15px;
+    /*要素を丸くする */
+    border-width: 100px;
+    /* 上、右、下、左の順に指定 */
+    float:right;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+    border: 2px solid black;
+    /* 2pxの幅で黒い縁線を追加 */
+    padding-top: 4px;
+    padding-right: 10px;
+    /* 右側に20pxのパディングを設定 */
+    /* scroll-snap-align: start; */
+  }
+
+  .simplebar-track {
+    background: #e5e5e5;
+    /* バーの背景色を設定できます*/
+    border-radius: 10px;
+    /* バーに丸みをもたせる*/
+    left: 336px;
+  }
+
+  .simplebar-track .simplebar-scrollbar.simplebar-visible::before {
+    opacity: 1;
+    /* デフォルトだと薄くなっています。*/
+  }
+
+  .simplebar-track .simplebar-scrollbar::before {
+    background: #abbdda;
+    /* ここでバーの色を設定 */
+  }
+
+  .scroll-area {
+    width: 345px;
+    height: 590px;
+    left: 5px;
+    border-radius: 20px;
+    /* バーに丸みをもたせる*/
+    bottom: 2px;
+  }
+
+  section {
+    background: #fdf6e9;
+    color: #000;
+    padding: 11px;
+    width: auto;
+    height: auto;
+    /* margin-bottom: 9px; */
+    border-radius: 26px;
+  }
+
+  .box1 {
+    width: 330px;
+    border: 2px solid #8faadc;
+    color: #000;
+    margin-bottom: 3px;
+    border-radius: 26px;
+    /* 他の要素より手前に配置 */
+  }
+
   
+
+  .box2 {
+    width: 330px;
+    background: #ffd966;
+    color: #000;
+    padding: 2px;
+    margin-bottom: 3px;
+    border-radius: 26px;
+    position: relative;
+    /* 相対位置を指定 */
+    z-index: 1;
+    /* 他の要素より手前に配置 */
+  }
+
+
+  .box3 {
+    width: 330px;
+    background: #ff6969;
+    color: #000;
+    padding: 2px;
+    margin-bottom: 3px;
+    border-radius: 26px;
+    position: relative;
+    /* 相対位置を指定 */
+    z-index: 1;
+    /* 他の要素より手前に配置 */
+  }
+
+  a.article {
+    text-decoration: none;
+  }
+
+  article {
+    background: #fdf6e9;
+    color: #000;
+    padding: 3px;
+    margin-top: 0px;
+    margin-bottom: 2px;
+    margin-left: 5px;
+    font-size: 23px;
+    font-weight: bolder;
+  }
+
+  .logo img {
+    display: none;
+  }
+
+  .home {
+    display: none;
+  }
+
+  .question {
+    display: none;
+  }
+
+  .answers-num{
+    display: none;
+  }
+
+  .article-category {
+    font-size: 10px;
+    background-color: #f2f2f2;
+    border-radius: 15px;
+    color: #000000;
+    padding: 2px 5px 2px 5px;
+    margin-right: 3px;
+  }
+
+  .unsolved-category {
+    background-color: #8faadc;
+    border-radius: 15px;
+    color: #000000;
+    padding: 2px 5px 2px 5px;
+    margin-right: 3px;
+  }
+
+  .Notanswered-category {
+    background-color: #ffd966;
+    border-radius: 15px;
+    color: #000000;
+    padding: 2px 5px 2px 5px;
+    margin-right: 3px;
+  }
+
+  .answered-category {
+    background-color: #ff6969;
+    border-radius: 15px;
+    color: #000000;
+    padding: 2px 5px 2px 5px;
+    margin-right: 3px;
+  }
+  .format-private{
+    font-size: 10px;
+    background-color: #191970;
+    border-radius: 15px;
+    color: #ffffff;
+    font-family: bold;
+    padding: 2px 5px 2px 5px;
+  }
+  .format-exchange{
+    font-size: 10px;
+    background-color: #87ceeb;
+    border-radius: 15px;
+    color: #ffffff;
+    padding: 2px 5px 2px 5px;
+  }
+  .format-qa{    
+    font-size: 10px;
+    background-color: #ffa500;
+    border-radius: 15px;
+    color: #ffffff;
+    padding: 2px 5px 2px 5px;
+  }
+
+
+  .unsolved-category-answer,
+  .Notanswered-category-answer,
+  .answered-category-answer {
+    bottom: 10px;
+    position: absolute;
+    /* 絶対位置を指定 */
+    z-index: 2;
+    /* 他の要素より手前に配置 */
+  }
+
+  @import url('https://fonts.googleapis.com/css?family=Roboto|Noto+Sans|Open+Sans&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap');
+  .PostDay{
+    font-family: 'Roboto', 'Noto Sans', 'Open Sans', sans-serif;
+  font-size: 0.9rem; /* またはサイトのデザインに合わせて調整 */
+  color: #333; /* カラーコードはサイトのデザインに合わせて調整 */
+  }
+  
+  .UserName{
+  font-family: 'Noto Sans JP', sans-serif;
+  }
+
+
+  .notification {
+    display: none;
+  }
+
+  .login {
+    display: none;
+  }
+
+  .post {
+    display: none;
+  }
+
+  aside {
+    display: none;
+  }
+
+  .rank {
+    display: none;
+  }
+
+  .item {
+    display: none;
+  }
 }
