スマホ画面のヘッダーの変更

--- a/T-CHAT-Home.css
+++ b/T-CHAT-Home.css
@@ -114,6 +114,7 @@
     align-items: center;
     width: 50px;
     height: 35px;
+
     margin-right: 7px;
     border: none;
     border-radius: 0 8px 8px 0;
@@ -171,6 +172,7 @@
     margin-left: 5px;
     margin-right: 40px;
     max-width: 150px;
+
     /* ロゴ画像の
 最大幅を設定 */
   }
@@ -267,16 +269,16 @@
   a.article {
     text-decoration: none;
   }
-  @import url('https://fonts.googleapis.com/css?family=Roboto|Noto+Sans|Open+Sans&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap');
-  .PostDay{
-    font-family: 'Roboto', 'Noto Sans', 'Open Sans', sans-serif;
-  font-size: 0.9rem; /* またはサイトのデザインに合わせて調整 */
-  color: #333; /* カラーコードはサイトのデザインに合わせて調整 */
+  @import url("https://fonts.googleapis.com/css?family=Roboto|Noto+Sans|Open+Sans&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap");
+  .PostDay {
+    font-family: "Roboto", "Noto Sans", "Open Sans", sans-serif;
+    font-size: 0.9rem; /* またはサイトのデザインに合わせて調整 */
+    color: #333; /* カラーコードはサイトのデザインに合わせて調整 */
   }
-  
-  .UserName{
-  font-family: 'Noto Sans JP', sans-serif;
+
+  .UserName {
+    font-family: "Noto Sans JP", sans-serif;
   }
 
   .answers-num {
@@ -409,20 +411,20 @@
     padding: 5px 8px 5px 8px;
   }
 
-  .format-private{
+  .format-private {
     background-color: #191970;
     border-radius: 15px;
     color: #ffffff;
     font-family: bold;
     padding: 5px 8px 5px 8px;
   }
-  .format-exchange{
+  .format-exchange {
     background-color: #87ceeb;
     border-radius: 15px;
     color: #ffffff;
     padding: 5px 8px 5px 8px;
   }
-  .format-qa{    
+  .format-qa {
     background-color: #ffa500;
     border-radius: 15px;
     color: #ffffff;
@@ -547,7 +549,7 @@
     display: flex;
     align-items: center;
     overflow: hidden;
-    border-radius: 3px,0px,0px,3px;
+    border-radius: 3px, 0px, 0px, 3px;
     margin-left: 45px;
   }
 
@@ -572,14 +574,13 @@
     content: "";
   }
 
-
   main {
     background-color: white;
     border-radius: 15px;
     /*要素を丸くする */
     border-width: 100px;
     /* 上、右、下、左の順に指定 */
-    float:right;
+    float: right;
     width: auto;
     height: auto;
     box-sizing: border-box;
@@ -637,8 +638,6 @@
     /* 他の要素より手前に配置 */
   }
 
-  
-
   .box2 {
     width: 330px;
     background: #ffd966;
@@ -651,7 +650,6 @@
     z-index: 1;
     /* 他の要素より手前に配置 */
   }
-
 
   .box3 {
     width: 330px;
@@ -681,10 +679,6 @@
     font-weight: bolder;
   }
 
-  .logo img {
-    display: none;
-  }
-
   .home {
     display: none;
   }
@@ -693,7 +687,7 @@
     display: none;
   }
 
-  .answers-num{
+  .answers-num {
     display: none;
   }
 
@@ -729,7 +723,7 @@
     padding: 2px 5px 2px 5px;
     margin-right: 3px;
   }
-  .format-private{
+  .format-private {
     font-size: 10px;
     background-color: #191970;
     border-radius: 15px;
@@ -737,21 +731,20 @@
     font-family: bold;
     padding: 2px 5px 2px 5px;
   }
-  .format-exchange{
+  .format-exchange {
     font-size: 10px;
     background-color: #87ceeb;
     border-radius: 15px;
     color: #ffffff;
     padding: 2px 5px 2px 5px;
   }
-  .format-qa{    
+  .format-qa {
     font-size: 10px;
     background-color: #ffa500;
     border-radius: 15px;
     color: #ffffff;
     padding: 2px 5px 2px 5px;
   }
-
 
   .unsolved-category-answer,
   .Notanswered-category-answer,
@@ -763,18 +756,17 @@
     /* 他の要素より手前に配置 */
   }
 
-  @import url('https://fonts.googleapis.com/css?family=Roboto|Noto+Sans|Open+Sans&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap');
-  .PostDay{
-    font-family: 'Roboto', 'Noto Sans', 'Open Sans', sans-serif;
-  font-size: 0.9rem; /* またはサイトのデザインに合わせて調整 */
-  color: #333; /* カラーコードはサイトのデザインに合わせて調整 */
-  }
-  
-  .UserName{
-  font-family: 'Noto Sans JP', sans-serif;
+  @import url("https://fonts.googleapis.com/css?family=Roboto|Noto+Sans|Open+Sans&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap");
+  .PostDay {
+    font-family: "Roboto", "Noto Sans", "Open Sans", sans-serif;
+    font-size: 0.9rem; /* またはサイトのデザインに合わせて調整 */
+    color: #333; /* カラーコードはサイトのデザインに合わせて調整 */
   }
 
+  .UserName {
+    font-family: "Noto Sans JP", sans-serif;
+  }
 
   .notification {
     display: none;
@@ -815,14 +807,17 @@
   #body {
     background-image: url("./T-CHAT-Image/T-CHAT_icon.png");
     background-repeat: no-repeat;
-    background-size: 120px;
+    background-size: 90px;
+    background-position: left 10px top 10px; /* 背景画像を右に10ピクセル、下に30ピクセル移動 */
   }
+
   .search-form {
     display: flex;
     align-items: center;
     overflow: hidden;
-    border-radius: 3px,0px,0px,3px;
-    margin-left: 45px;
+
+    border-radius: 3px, 0px, 0px, 3px;
+    margin-left: 15px;
   }
 
   .search-form button {
@@ -830,7 +825,7 @@
     justify-content: center;
     align-items: center;
     width: 50px;
-    height: 23px;
+    height: 22px;
     margin-right: 7px;
     border: none;
     border-radius: 0 8px 8px 0;
@@ -846,14 +841,13 @@
     content: "";
   }
 
-
   main {
     background-color: white;
     border-radius: 15px;
     /*要素を丸くする */
     border-width: 100px;
     /* 上、右、下、左の順に指定 */
-    float:right;
+    float: right;
     width: auto;
     height: auto;
     box-sizing: border-box;
@@ -911,8 +905,6 @@
     /* 他の要素より手前に配置 */
   }
 
-  
-
   .box2 {
     width: 330px;
     background: #ffd966;
@@ -925,7 +917,6 @@
     z-index: 1;
     /* 他の要素より手前に配置 */
   }
-
 
   .box3 {
     width: 330px;
@@ -967,7 +958,7 @@
     display: none;
   }
 
-  .answers-num{
+  .answers-num {
     display: none;
   }
 
@@ -1003,7 +994,7 @@
     padding: 2px 5px 2px 5px;
     margin-right: 3px;
   }
-  .format-private{
+  .format-private {
     font-size: 10px;
     background-color: #191970;
     border-radius: 15px;
@@ -1011,21 +1002,20 @@
     font-family: bold;
     padding: 2px 5px 2px 5px;
   }
-  .format-exchange{
+  .format-exchange {
     font-size: 10px;
     background-color: #87ceeb;
     border-radius: 15px;
     color: #ffffff;
     padding: 2px 5px 2px 5px;
   }
-  .format-qa{    
+  .format-qa {
     font-size: 10px;
     background-color: #ffa500;
     border-radius: 15px;
     color: #ffffff;
     padding: 2px 5px 2px 5px;
   }
-
 
   .unsolved-category-answer,
   .Notanswered-category-answer,
@@ -1037,18 +1027,17 @@
     /* 他の要素より手前に配置 */
   }
 
-  @import url('https://fonts.googleapis.com/css?family=Roboto|Noto+Sans|Open+Sans&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap');
-  .PostDay{
-    font-family: 'Roboto', 'Noto Sans', 'Open Sans', sans-serif;
-  font-size: 0.9rem; /* またはサイトのデザインに合わせて調整 */
-  color: #333; /* カラーコードはサイトのデザインに合わせて調整 */
-  }
-  
-  .UserName{
-  font-family: 'Noto Sans JP', sans-serif;
+  @import url("https://fonts.googleapis.com/css?family=Roboto|Noto+Sans|Open+Sans&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap");
+  .PostDay {
+    font-family: "Roboto", "Noto Sans", "Open Sans", sans-serif;
+    font-size: 0.9rem; /* またはサイトのデザインに合わせて調整 */
+    color: #333; /* カラーコードはサイトのデザインに合わせて調整 */
   }
 
+  .UserName {
+    font-family: "Noto Sans JP", sans-serif;
+  }
 
   .notification {
     display: none;
