--- a/T-CHAT-Question/T-CHAT-Question.css
+++ b/T-CHAT-Question/T-CHAT-Question.css
@@ -149,6 +149,8 @@ header {
   border-radius: 8px 8px 8px 8px;
   font-size: 25px;
   text-decoration: none;
+  position: relative;
+  left: 50px;
 }
 
 .post {
@@ -164,6 +166,8 @@ header {
   border-radius: 8px 8px 8px 8px;
   font-size: 25px;
   text-decoration: none;
+  position: relative;
+  left: 50px;
 }
 
 .logo img {
