--- a/T-CHAT-Detail/T-CHAT-Temp.css
+++ b/T-CHAT-Detail/T-CHAT-Temp.css
@@ -219,6 +219,8 @@ main::-webkit-scrollbar-thumb {
   background: #fdf6e9;
   padding: 11px;
   border-radius: 8px 8px 8px 8px;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
 .box2 {
@@ -229,6 +231,8 @@ main::-webkit-scrollbar-thumb {
   background: #fdf6e9;
   padding: 11px;
   border-radius: 8px 8px 8px 8px;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
 .box3 {
@@ -239,18 +243,30 @@ main::-webkit-scrollbar-thumb {
   background: #fdf6e9;
   padding: 11px;
   border-radius: 8px 8px 8px 8px;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
 
 h3 {
+  font-size: 25px;
   margin: 2px 0;
+  margin-left: 19px;
 }
 
 h1 {
   margin: 2px 0;
-  font-size: 15px;
+  font-size: 35px;
   font-weight: normal;
+  margin-left: 19px;
 }
+
+p{
+  font-size:20px;
+  margin-left: 19px;
+}
+
+
 
 .article-category {
   background-color: #f2f2f2;
@@ -258,7 +274,7 @@ h1 {
   color: #000000;
   padding: 5px 8px 5px 8px;
   margin-top: 1px;
-  margin-bottom: 1px;
+  margin-bottom: 20px;
   margin-left: 15px;
 }
 
@@ -312,21 +328,14 @@ h1 {
   border-radius: 15px;
   color: #ffffff;
   padding: 5px 8px 5px 8px;
+  margin-left: 19px
 }
 
 
-blockquote {
-  margin: 0;
-  padding: 0;
-  counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
-}
-blockquote {
-  border-left: 4px solid #ccc;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  padding-left: 16px;
-}
 
+img{
+  margin-left: 19px;
+}
 .total {
   margin-left: 900px;
   /* .unsolved-category-answer と同じスタイルを持たせる */
@@ -349,14 +358,17 @@ blockquote {
   margin-top: 1px;
   margin-bottom: 1px;
 }
-
+@import url("https://fonts.googleapis.com/css?family=Roboto|Noto+Sans|Open+Sans&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap");
 .date {
+  font-family: "Roboto", "Noto Sans", "Open Sans", sans-serif;
   margin-top: 1px;
   margin-bottom: 1px;
   margin-left: 15px;
 }
 
 .name {
+  font-family: "Noto Sans JP", sans-serif;
   margin-top: 1px;
   margin-bottom: 1px;
   margin-left: 15px;
@@ -369,10 +381,12 @@ blockquote {
   margin-top: 5px;
   margin-bottom: 7px;
   margin-left: 15px;
-  font-size: 28px;
+  font-size: 35px;
   font-weight: bolder;
-  margin-top: 1px;
-  margin-bottom: 1px;
+  margin-top: 10px;
+  margin-bottom: 14px;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 .ans-count {
   background: #fdf6e9;
@@ -429,12 +443,16 @@ blockquote {
   background-color: #ffffff;
   margin-bottom: 1em; /* 下部に1emのマージンを追加 */
   margin-top: 1em; /* 上部にもマージンを追加して隙間を作る */
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
 /* 回答コンテナ */
 .responses {
   background-color: transparent; /* この背景を透明にする */
   padding: 1em; /* コンテナ全体のパディングを設定 */
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
 .reply {
@@ -445,6 +463,8 @@ blockquote {
   display: flex;
   align-items: center; /* コンテンツとボタンを縦方向に中央揃えにする場合 */
   justify-content: space-between; 
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
 .response-button {
@@ -639,7 +659,14 @@ blockquote {
   padding: 11px;
   border-radius: 8px 8px 8px 8px;
 }
-
+main ol{
+  font-size: 20px;
+  margin-left: 15px;
+}
+main ul{
+  font-size: 20px;
+  margin-left: 15px;
+}
 blockquote {
   margin: 0;
   padding: 0;
@@ -649,9 +676,10 @@ blockquote {
   border-left: 4px solid #ccc;
   margin-bottom: 5px;
   margin-top: 5px;
-  padding-left: 16px;
+  padding-left: 10px;
+  font-size: 25px;
+  margin-left: 19px;
 }
-
 .article-category {
   background-color: #f2f2f2;
   border-radius: 15px;
@@ -959,6 +987,8 @@ blockquote {
   .responses {
     background-color: transparent; /* この背景を透明にする */
     padding: 0px; /* コンテナ全体のパディングを設定 */
+    word-wrap: break-word;
+  word-break: keep-all;
   }
 
 .reply {
@@ -968,9 +998,13 @@ blockquote {
 }
 
 .content-and-button {
-  display: flex;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
 
+.response-button {
+  display: none;
+}
   .text {
     display: none;
   }
@@ -1269,7 +1303,11 @@ blockquote {
 }
 
 .content-and-button {
-  display: flex;
+  word-wrap: break-word;
+  word-break: keep-all;
+}
+.response-button {
+  display: none;
 }
 
   .text {
@@ -1569,7 +1607,11 @@ blockquote {
 }
 
 .content-and-button {
-  display: flex;
+  word-wrap: break-word;
+  word-break: keep-all;
+}
+.response-button {
+  display: none;
 }
 
   .text {
@@ -1869,7 +1911,11 @@ blockquote {
 }
 
 .content-and-button {
-  display: flex;
+  word-wrap: break-word;
+  word-break: keep-all;
+}
+.response-button {
+  display: none;
 }
 
   .text {
@@ -2169,9 +2215,12 @@ blockquote {
 }
 
 .content-and-button {
-  display: flex;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
-
+.response-button {
+  display: none;
+}
   .text {
     display: none;
   }
@@ -2469,7 +2518,11 @@ blockquote {
 }
 
 .content-and-button {
-  display: flex;
+  word-wrap: break-word;
+  word-break: keep-all;
+}
+.response-button {
+  display: none;
 }
 
   .text {
@@ -2769,9 +2822,12 @@ blockquote {
 }
 
 .content-and-button {
-  display: flex;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
-
+.response-button {
+  display: none;
+}
   .text {
     display: none;
   }
@@ -3071,9 +3127,12 @@ blockquote {
 }
 
 .content-and-button {
-  display: flex;
+  word-wrap: break-word;
+  word-break: keep-all;
 }
-
+.response-button {
+  display: none;
+}
   .text {
     display: none;
   }
